# fine_tune_llm

./: .gitignore  README.md  pyproject.toml
src/dayone_prepare/: .gitignore  conv.sh  hist.sh
src/gemma2_ft/: fine_tune.py  inference.py  inference_ft.py
src/stablelm_ft/: fine_tune.py  inference.py  inference_ft.py
