[project]
name = "gemma2-ft"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Teppchan", email = "teppchan+github@github.com" }
]
dependencies = [
    "peft>=0.12.0",
    "transformers>=4.43.3",
    "bitsandbytes>=0.43.3",
    "datasets>=2.20.0",
    "trl>=0.9.6",
    "click>=8.1.7",
    "deepspeed>=0.14.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.6",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gemma2_ft"]
